# sim_juncs

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt
junctions/Au_SiO2_bowtie/: junc.geom  params.conf
junctions/Au_SiO2_box/: junc.eps  junc.geom  junc_template.geom  params.conf
junctions/Au_SiO2_sidetie/: junc.geom
junctions/Au_SiO2_tri/: junc_template.geom  params.conf
junctions/Au_SiO2_tri_vert/: junc_template.geom
junctions/Au_graphene_box/: junc_template.geom  params.conf
junctions/quartz_box/: junc.eps  junc.mt  params.conf
junctions/silver_box/: junc.eps  junc.mt  params.conf
scripts/: check_enes.py  make_archive.sh  params.conf  phase_plot.py  phase_plot_new.py  phases.py  phases_new.py  run.sh  set_dims.py  time_space.py  utils.py
src/: argparse.h  argparse.h.back  cgs.cpp  cgs.hpp  cgs_data.cpp  cgs_data.hpp  cgs_read.cpp  cgs_read.hpp  data_utils.cpp  data_utils.hpp  disp.cpp  disp.hpp  geometry.hpp  main.cpp  main.cpp.back  main_test.cpp  main_test.hpp  strops.h
tests/: alpha.geom  context_test.geom  run.conf  run.geom  span.conf  span.geom  test.conf  test.eps  test.geom  test.mt  test_lines.geom
